--- a/Udemy.TodoAppNTier/Udemy.ToDoAppNTier.UI/Views/Home/Index.cshtml
+++ b/Udemy.TodoAppNTier/Udemy.ToDoAppNTier.UI/Views/Home/Index.cshtml
@@ -6,9 +6,14 @@
     <link href="~/node_modules/bootstrap/dist/css/bootstrap.min.css" rel="stylesheet" />
 </head>
 <body>
-    
+
     <div class="container my-2">
-        <table class="table table-hovered table-border table-sm">
+
+        <div class="text-end my-2">
+            <a asp-action="Create" asp-controller="Home" class="btn btn-primary btn-sm">Yeni İş Ekle</a>
+        </div>
+
+        <table class="table table-hovered table-bordered table-sm">
             <thead>
                 <tr>
                     <th>İş</th>
@@ -21,7 +26,7 @@
                 {
                     <tr>
                         <td>@item.Definition</td>
-                        <td>@(item.IsCompleted?"Tamamlandı":"Tamamlanmadı")</td>
+                        <td>@(item.IsCompleted ? "Tamamlandı" : "Tamamlanmadı")</td>
                     </tr>
                 }
 
