--- a/efcoreApp/Views/Kurs/Index.cshtml
+++ b/efcoreApp/Views/Kurs/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<Kurs>
 
-<h2>Öğrenci Listesi</h2>
+<h2>Kurs Listesi</h2>
 <a href="/Kurs/Create" class="btn btn-primary">Kurs Ekle</a>
 <hr>
 <table class="table table-bordered">
