--- a/efcoreApp/Views/KursKayit/Create.cshtml
+++ b/efcoreApp/Views/KursKayit/Create.cshtml
@@ -5,8 +5,8 @@
 <form asp-controller="KursKayit" asp-action="Create" method="post">
 
     <div class="mb-3">
-        <label asp-for="OgreniId" class="form-label">Öğrenci</label>
-        <select asp-for="OgreniId" asp-items="ViewBag.Ogrenciler" class="form-control">
+        <label asp-for="OgrenciId" class="form-label">Öğrenci</label>
+        <select asp-for="OgrenciId" asp-items="ViewBag.Ogrenciler" class="form-control">
             <option value="">Seçiniz</option>
         </select>
     </div>
