--- a/efcoreApp/Views/KursKayit/Index.cshtml
+++ b/efcoreApp/Views/KursKayit/Index.cshtml
@@ -1,5 +1,27 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
-@{
-}
+﻿@model IEnumerable<KursKayit>
+
+<h2>Öğrenci Listesi</h2>
+<table>
+    <thead>
+        <tr>
+            <th style="width:150px">@Html.DisplayNameFor(m => m.KayitId)</th>
+            <th>@Html.DisplayNameFor(m => m.Ogrenci.OgrenciAd)</th>
+            <th>@Html.DisplayNameFor(m => m.Kurs.Baslik)</th>
+            <th style="width:150px"></th>
+        </tr>
+    </thead>
+    <tbody>
+        @foreach (var item in Model)
+        {
+            <tr>
+                <td>@Html.DisplayFor(modelıtem => item.KayitId)</td>
+                <td>@Html.DisplayFor(modelıtem => item.Ogrenci.OgrenciAd)</td>
+                <td>@Html.DisplayFor(modelıtem => item.Kurs.Baslik)</td>
+                <td>
+                    <a class="btn btn-sm btn-primary" asp-action="Edit" asp-route-id="@item.OgrenciId">Güncelle</a>
+                    <a class="btn btn-sm btn-danger" asp-action="Delete" asp-route-id="@item.OgrenciId">Sil</a>
+                </td>
+            </tr>
+        }
+    </tbody>
+</table>
