--- a/efcoreApp/Views/KursKayit/Index.cshtml
+++ b/efcoreApp/Views/KursKayit/Index.cshtml
@@ -1,7 +1,7 @@
 ﻿@model IEnumerable<KursKayit>
 
 <h2>Öğrenci Listesi</h2>
-<table>
+<table class="table table-bordered">
     <thead>
         <tr>
             <th style="width:150px">@Html.DisplayNameFor(m => m.KayitId)</th>
