Ogretmen Ekleme listeleme Ve Güncelleme

--- a/efcoreApp/Views/KursKayit/Index.cshtml
+++ b/efcoreApp/Views/KursKayit/Index.cshtml
@@ -1,6 +1,6 @@
 ﻿@model IEnumerable<KursKayit>
 
-<h2>Öğrenci Listesi</h2>
+<h2>Kayıt Listesi</h2>
 <a href="/KursKayit/Create" class="btn btn-primary">Kursa Öğrenci Ekle</a>
 <hr>
 <table class="table table-bordered">
