--- a/efcoreApp/Views/Kurs/Create.cshtml
+++ b/efcoreApp/Views/Kurs/Create.cshtml
@@ -8,6 +8,14 @@
         <label asp-for="Baslik" class="form-label">Kurs Başlığı</label>
         <input asp-for="Baslik" class="form-control" />
     </div>
+
+    <div class="mb-3">
+        <label asp-for="OgretmenId">Öğretmen</label>
+        <select asp-for="OgretmenId" asp-items="ViewBag.Ogretmenler" class="form-select">
+            <option value="">Seçiniz</option>
+        </select>
+    </div>
+
     <button type="submit" class="btn btn-secondary">Kaydet</button>
 
 </form>
