--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -2,16 +2,20 @@
 <head>
     <link href="/lib/bootstrap/css/bootstrap.min.css" rel="stylesheet" />
     <link href="/lib/bootstrap-icons/font/bootstrap-icons.min.css" rel="stylesheet" />
+    <link href="/css/style.css" rel="stylesheet" />
     <title></title>
 </head>
 <body>
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
             <a class="navbar-brand" href="/">
-                <i class="bi bi-code"></i>BlogApp
+                <i class="bi bi-code"></i> BlogApp
             </a>
         </div>
     </nav>
-    @RenderBody()
+    <div class="container mt-3">
+        @RenderBody()
+    </div>
+
 </body>
 </html> 
