--- a/BlogApp/Views/Posts/Details.cshtml
+++ b/BlogApp/Views/Posts/Details.cshtml
@@ -4,13 +4,13 @@
     <div class="col-lg-8">
         <div class="bg-white p-4">
             <h1 class="h4 mb-4">@Model.Title</h1>
-
             <div class="tags">
-
-                <a asp-actions ="" class="badge bg-primary bg-opacity-10 text-primary mb-2 fw-bold">PHP</a>
-                <a href="#" class="badge bg-danger bg-opacity-10 text-danger mb-2 fw-bold">Web Development</a>
-
+                @foreach (var tag in Model.Tags)
+                {
+                    <a href="/posts/tag/@tag.Url" class="badge bg-@tag.Color bg-opacity-10 text-@tag.Color mb-2 fw-bold">@tag.Text</a>
+                }
             </div>
+            
             <img src="~/img/@Model.Image" class="img-fluid rounded" alt="Alternate Text" />
             <div>@Model.Content</div>
         </div>
