--- a/BlogApp/Views/Shared/_Layout.cshtml
+++ b/BlogApp/Views/Shared/_Layout.cshtml
@@ -8,9 +8,10 @@
 <body>
     <nav class="navbar navbar-expand-lg bg-white shadow-sm">
         <div class="container">
-            <a class="navbar-brand" href="/">
+            <a class="navbar-brand" href="/posts">
                 <i class="bi bi-code"></i> BlogApp
             </a>
+
         </div>
     </nav>
     <div class="container mt-3">
