--- a/BlogApp/Views/Posts/Details.cshtml
+++ b/BlogApp/Views/Posts/Details.cshtml
@@ -10,13 +10,33 @@
                     <a href="/posts/tag/@tag.Url" class="badge bg-@tag.Color bg-opacity-10 text-@tag.Color mb-2 fw-bold">@tag.Text</a>
                 }
             </div>
-            
+
             <img src="~/img/@Model.Image" class="img-fluid rounded" alt="Alternate Text" />
             <div>@Model.Content</div>
-        </div> 
+        </div>
         <div class="bg-white mt-3">
-            <div class="card-header pb-0">
-                <h4>@Model.Comments.Count() adet yorum.</h4>
+            <div class="card border-0">
+                <div class="card-header pb-0">
+                    <h4>@Model.Comments.Count() adet yorum.</h4>
+                </div>
+                <div class="card-body">
+                    @foreach (var comment in Model.Comments)
+                    {
+                        <div class="my-4 d-flex">
+                            <img class="avatar rounded-circle float-start me-3" src="/img/@comment.User.Image" alt="Alternate Text" />
+                            <div>
+                                <div class="mb-2">
+                                    <h6> @comment.User.UserName</h6>
+                                    <span> @comment.PublishedOn</span>
+                                </div>
+                            </div>
+                            
+                            <p>@comment.Text</p>
+                        </div>
+
+                    }
+
+                </div>
             </div>
         </div>
     </div>
